Fixed colour pallete, added dark mode switch style, and local storage for dark mode preference

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,7 +25,7 @@ a {
 }
 
 a, a:visited, a:hover, a:active {
-  color: #6969fc;
+  color: #487bff;
 }
 
 .app-bar{
